--- a/source/_posts/脚本-批量收集服务器信息.md
+++ b/source/_posts/脚本-批量收集服务器信息.md
@@ -122,4 +122,4 @@ bash get-system-info.sh
 ## 效果
 最终的预览效果如下
 
-![system-info](../images/system-info预览.png)
+![system-info](https://mys3.kengdie.xyz/blog/system-info预览.png)
